# ratatui-macros

./: CHANGELOG.md  Cargo.toml  README.md
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs
ratatui-macros-core/: Cargo.toml
ratatui-macros-derive/: Cargo.toml
ratatui-macros-derive/src/: lib.rs
src/: layout.rs  lib.rs  line.rs  row.rs  span.rs  text.rs
tests/ui/: fails.rs  fails.stderr
