[package]
name = "ratatui-proc-macros"
version = "0.5.0"
edition = "2021"
authors = ["The Ratatui Developers"]
description = "Proc macros for Ratatui"
license = "MIT"                                              # or any other appropriate license
repository = "https://github.com/ratatui-org/ratatui-macros"
documentation = "https://docs.rs/ratatui-macros"
keywords = ["ratatui", "macros", "tui", "ui"]
categories = ["command-line-interface"]

[dependencies]
ratatui = "0.28.1"
quote = "1.0.37"
syn = "2.0.76"

[lib]
proc-macro = true
