[package]
name = "ratatui-macros-derive"
version = "0.1.0"
edition = "2021"
description = "Proc Macro crate for Ratatui (for internal use only)"
license = "MIT" # or any other appropriate license

[lib]
proc-macro = true

[dependencies]
ratatui-macros-core = { version = "0.1.0", path = "../ratatui-macros-core" }
proc-macro-error = "1.0"
proc-macro2 = "1.0"
